--- a/flowtica-dashboard/package.json
+++ b/flowtica-dashboard/package.json
@@ -1,7 +1,8 @@
 {
   "name": "flowtica-dashboard",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -14,11 +15,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4",
-    "@supabase/supabase-js": "^2.38.0",
-    "recharts": "^2.8.0",
-    "lucide-react": "^0.294.0",
-    "date-fns": "^2.30.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
